# AI-Fest-Satim

./: .env.template  DOCUMENTATION_ARCHITECTURE_MULTI_AGENTS.md  README.md  config.yaml  fast.md  fetch_security_standards.py  kpi_agent_test_result.json  main.py  pyproject.toml  rag_complete_pipeline.py  requirements.txt  retreiver.py  setup.sh  simple_evaluation_result.json  start_standards_api.py  test_evaluate_policy.py  test_kpi_implementation.py  test_policy_evaluation.py  use_case_processor_test_result.json
agents/: base.py  evaluation_agents.py  expert_agents.py  kpi_agent.py  use_case_agents.py
docs/: KPI_IMPLEMENTATION_GUIDE.md  agent.txt  api.md  api_testing_guide.md  frontend_endpoints_documentation.md  use_caser.txt
embed/: __init__.py  document_loader.py  embeddings.py  example.py  factory.py  rag_system.py
handlers/: __init__.py  file_utils.py  models.py  policy_handlers.py  use_case_handlers.py
pipelines/: policy_evaluation.py  use_case_processor.py
scripts/: ARCHITECTURE.md  README_STANDARDS_TRACKER.md  dev.sh  rag_complete_pipeline.py  scheduled_standards_tracker.py  security_standards_tracker.py  standards_api_client.py  test_api.py  test_kpi_agent.py  test_policy_evaluation.py  test_requirements.txt  test_security_standards_tracker.py  test_structured_output.py  test_use_case_processor.py
security_standards_tracker/: README.md  REFACTORING_REPORT.md  __init__.py  api_server.py  config.py  scheduled_tracker.py  tracker_cli.py
tools/: index.py  kpi.py  vector_db.py  web.py
usecases/: Evaluation_GRC_Use_Cases_1_8(2) (1).docx  (+1 more)
(+19 files in other folders)
